import real project

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "benford-frontend",
+  "name": "benford-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,10 +9,11 @@
     "ramda": "^0.27.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-native-web": "^0.12.2",
+    "react-native-web": "^0.13.3",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.1",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "reselect": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
